crud clan, member

--- a/src/mail/mail-templates/password-onetime.hbs
+++ b/src/mail/mail-templates/password-onetime.hbs
@@ -1,16 +1,16 @@
 <!DOCTYPE html> 
-<html lang="en"> 
+<html lang="ja"> 
     <head> 
         <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale="> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     </head> 
-    <body style="margin-top:20;font-family:arial;line-height:10px"> 
-        <p>認証コード：{{password}}</p> <br>
-        <p>上記の認証コードを入力し、ログインしてください。</p> 
-        <p>コードは発行後10分間有効です。有効期限が切れた場合は、再度ウェブサイトから認証コード送信を行なってください。</p><br>
-        <p>本メールにお心当たりがない場合は、誠に恐れ入りますが破棄していただくようお願いいたします。</p><br>
-        <p>※本メールは配信専用です。ご質問・ご返信いただいてもお答えできません。</p> 
-        <p>※ご不明点等は、弊社サイトよりお問い合わせください。</p> 
+    <body style="margin-top:20px;font-family:arial;line-height:1.5"> 
+        <p>Mã xác thực: {{password}}</p> <br>
+        <p>Vui lòng nhập mã xác thực trên và đăng nhập.</p> 
+        <p>Mã này có hiệu lực trong vòng 10 phút sau khi phát hành. Nếu mã đã hết hạn, vui lòng thực hiện gửi lại mã xác thực từ trang web.</p><br>
+        <p>Nếu bạn không nhận được email này từ chúng tôi, xin vui lòng bỏ qua.</p><br>
+        <p>※ Email này chỉ được gửi đi, không thể trả lời.</p> 
+        <p>※ Nếu có bất kỳ thắc mắc nào, vui lòng liên hệ qua trang web của chúng tôi.</p> 
 
     </body> 
 </html>
