--- a/src/mail/mail-templates/invite-email.hbs
+++ b/src/mail/mail-templates/invite-email.hbs
@@ -1,20 +1,25 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-    <head> 
-        <meta charset="UTF-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale="> 
-    </head> 
-    <body style="margin-top:20;font-family:arial;line-height:10px"> 
-        <p>{{userName}} 様、</p><br>
-        <p>大変お世話になっております。</p>
-        <p>今回、{{userName}} 様には、当サービスの {{organizationName}} 組織にご参加いただきたく存じます。</p><br>
-        <p>参加するために、以下のリンクをクリックしてください。</p> 
-        <p>
-            <a href="{{url}}" style="display:inline-block;padding:10px;background:#00838f;text-decoration:none;color:#ffffff">参加する</a> 
-        </p> <br>
-        <p>アカウントをお持ちでない方は、必要な情報を入力し、登録してください。登録が完了すると、アカウントが作成され、アクセスできるようになります。</p> <br>
-        <p>※ 疑問、不明点につきましては、いつでもサポートチームまでご連絡ください。</p> 
-        <p>※ 何卒、よろしくお願い申し上げます。</p><br>
-        <p>サンファームサービスカスタマーサポート</p> 
-    </body>
+<html lang='vi'>
+  <head>
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  </head>
+  <body style='margin-top:20;font-family:arial;line-height:1.6'>
+    <p>Kính gửi quý vị {{userName}},</p><br />
+    <p>Chúng tôi rất trân trọng sự hỗ trợ của quý vị.</p>
+    <p>Lần này, chúng tôi muốn mời quý vị tham gia vào gia phả {{clanName}} của dịch vụ của chúng tôi.</p><br />
+    <p>Để tham gia, vui lòng nhấp vào liên kết dưới đây.</p>
+    <p>
+      <a
+        href='{{url}}'
+        style='display:inline-block;padding:10px;background:#00838f;text-decoration:none;color:#ffffff'
+      >Tham gia</a>
+    </p>
+    <br />
+    <p>Nếu quý vị chưa có tài khoản, vui lòng nhập thông tin cần thiết và đăng ký. Sau khi đăng ký hoàn tất, tài khoản
+      sẽ được tạo và quý vị có thể truy cập.</p>
+    <br />
+    <p>※ Nếu có bất kỳ thắc mắc nào, xin vui lòng liên hệ đến đội ngũ hỗ trợ của chúng tôi.</p>
+    <p>※ Xin chân thành cảm ơn.</p><br />
+    <p>Hỗ trợ khách hàng dịch vụ Genealogy</p>
+  </body>
 </html>
