--- a/src/mail/mail-templates/invite-email.hbs
+++ b/src/mail/mail-templates/invite-email.hbs
@@ -15,8 +15,7 @@
       >Tham gia</a>
     </p>
     <br />
-    <p>Nếu quý vị chưa có tài khoản, vui lòng nhập thông tin cần thiết và đăng ký. Sau khi đăng ký hoàn tất, tài khoản
-      sẽ được tạo và quý vị có thể truy cập.</p>
+    <p>Quý khách hãy sử dụng địa chỉ email này để truy cập vào website của chúng tôi.</p>
     <br />
     <p>※ Nếu có bất kỳ thắc mắc nào, xin vui lòng liên hệ đến đội ngũ hỗ trợ của chúng tôi.</p>
     <p>※ Xin chân thành cảm ơn.</p><br />
